<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTextView1"/>

    <Switch
            android:id="@+id/Switch1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/strSwitch"/>

    <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/strTextView2"/>

    <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible">

        <RadioButton
                android:id="@+id/RButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strPie"/>

        <RadioButton
                android:id="@+id/RButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strQ"/>

        <RadioButton
                android:id="@+id/RButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strR"/>
    </RadioGroup>
    <ImageView
            android:id="@+id/ImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"/>
    <Button
            android:id="@+id/Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/strButton1"/>

    <Button
            android:id="@+id/Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/strButton2"/>
</LinearLayout>